<resources>
    <string name="app_name">My MovieDB</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="setting">Setting</string>

    <string name="poster">Poster</string>
    <string name="title_movie">Title</string>
    <string name="releaseDate">ReleaseDate</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Overview</string>
    <string name="ErrorLoading">An Error In Loading Data</string>
    <string name="Loading">Try To Get Data</string>
    <string name="Overview">No Overview Data Yet</string>


    <string name="Favourite">Favourite</string>
    <string name="DisabledFav">Favorited</string>
    <string name="EmptyDataFavMovie">Favorite Movie Data Not Yet Available</string>
    <string name="DeleteFavourite">Delete Favourite</string>
    <string name="DoneMovie">Successfully saved favorite movie</string>
    <string name="DoneDeleteMovie">Movie Deleted Successfully</string>
    <string name="FavouriteMovies">Movies</string>
    <string name="FavouriteTvs">Tv</string>
    <string name="EmptyDataFavTv">Favorite TV Show Data Not Yet Available</string>

    <string name="DoneTv">Successfully saved favorite Tv Show</string>

    <string name="SearchMovie">Movie</string>
    <string name="SearchTvShow">TV Show</string>
    <string name="activity_search_movie">Search Movie</string>
    <string name="activity_search_tv">Search TV Show</string>


    <string name="progress_loading">Loading</string>
    <string name="not_found_movie">Movie Not Found</string>
    <string name="lookingformovie">Search Your Anime Movie</string>
    <string name="not_found_tv">TV Show Not Found</string>
    <string name="lookingfortv">Search Your Anime TV Show</string>

    <string name="settingLanguage">Language Settings</string>

    <string name="changeLanguage">Change Language</string>

    <string name="appwidget_text">Favourite Anime Movie</string>
    <string name="empty_text">No Data</string>

    <string name="notif">Dont Forget Check Your Favourite Anime Today</string>
    <string name="reminder">Reminder Settings</string>
    <string name="Alarm">Alarm</string>

    <string name="dailyAlarm">Daily Alarm</string>
    <string name="notifTodayMovie">Movie Release Notification</string>

    <string name="today">Today</string>
    <string name="release">Realease</string>
    <string name="setUpNotif">Release reminder set up</string>
    <string name="cancel">Cancel Repeating Alarm</string>
    <string name="cancelNotif">Cancel Notification Movie</string>
</resources>
