<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            tools:src="@color/colorAccent" />

        <ImageView
            android:id="@+id/img_poster_movie_small"
            android:layout_width="125dp"
            android:layout_height="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/poster"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster_movie"
            app:layout_constraintEnd_toEndOf="@+id/img_poster_movie"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.916"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:padding="8dp"
            android:text="@string/title_movie"
            android:textColor="@color/ColorTitle"
            android:textSize="26sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_releaseDate_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_movie" />

        <TextView
            android:id="@+id/tv_releaseDate_movie"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:text="@string/releaseDate"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

        <TextView
            android:id="@+id/tv_rating_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@android:drawable/btn_star_big_on"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/rating"
            android:textColor="@color/colorRating"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate_movie" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/synopsis"
            android:textAlignment="center"
            android:textColor="@color/ColorSynopsys"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_synopsis_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_movie"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_synopsis_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_movie" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <Button
            android:id="@+id/btnFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="197dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:foregroundTint="@color/ColorTitle"
            android:text="@string/Favourite"
            android:textColor="@color/ColorTitle"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

        <TextView
            android:id="@+id/textSukai"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/DisabledFav"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>